--- a/modules/50-other/40-media/description.ru.yml
+++ b/modules/50-other/40-media/description.ru.yml
@@ -4,7 +4,7 @@ name: Медиа запросы
 theory: |
   Для просмотра интернет-страниц используется множество устройств с различным размером и разрешений экрана: компьютеры, смартфоны, планшеты, ноутбуки и так далее. Такое количество устройств требует от разработчиков умение подстраивать свои страницы под разные вариации разрешений.
 
-  Один из способов изменить стили в зависимости от разрешения — использовании специальных CSS правил, которые срабатывают при выполнении заданных условий. Такими условиями могут быть:
+  Один из способов изменить стили в зависимости от разрешения — использованиe специальных CSS правил, которые срабатывают при выполнении заданных условий. Такими условиями могут быть:
 
   * Ширина или высота `viewport`
   * Горизонтальная или вертикальная ориентация экрана
